// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChalengesHistorySlot should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengesHistorySlot
    availableAtLevel={3}
    duration="30 minutes"
    locked={false}
    rating={3}
    reward={6}
    type="steps"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <View
        style={
          Object {
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "width": 160,
            }
          }
        >
          <YuText
            bold={true}
          >
            steps
          </YuText>
          <YuText
            bold={true}
          >
            30 minutes
          </YuText>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexGrow": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginLeft": -8,
              }
            }
          >
            <View>
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/level-complete/star.png",
                  }
                }
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
              />
            </View>
            <View>
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/level-complete/star.png",
                  }
                }
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
              />
            </View>
            <View>
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/level-complete/star.png",
                  }
                }
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
              />
            </View>
          </View>
          <YuText
            style={
              Object {
                "fontSize": 24,
              }
            }
          >
            6 yucoin
          </YuText>
        </View>
      </View>,
      "style": Object {
        "display": "flex",
        "paddingLeft": 176,
        "paddingRight": 40,
        "paddingVertical": 40,
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "width": 160,
              }
            }
          >
            <YuText
              bold={true}
            >
              steps
            </YuText>
            <YuText
              bold={true}
            >
              30 minutes
            </YuText>
          </View>,
          <View
            style={
              Object {
                "flex": 1,
                "flexGrow": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                  "marginLeft": -8,
                }
              }
            >
              <View>
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/level-complete/star.png",
                    }
                  }
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                />
              </View>
              <View>
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/level-complete/star.png",
                    }
                  }
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                />
              </View>
              <View>
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/level-complete/star.png",
                    }
                  }
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                />
              </View>
            </View>
            <YuText
              style={
                Object {
                  "fontSize": 24,
                }
              }
            >
              6 yucoin
            </YuText>
          </View>,
        ],
        "style": Object {
          "display": "flex",
          "flexDirection": "row",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                bold={true}
              >
                steps
              </YuText>,
              <YuText
                bold={true}
              >
                30 minutes
              </YuText>,
            ],
            "style": Object {
              "width": 160,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "steps",
              },
              "ref": null,
              "rendered": "steps",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "30 minutes",
              },
              "ref": null,
              "rendered": "30 minutes",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginLeft": -8,
                  }
                }
              >
                <View>
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/level-complete/star.png",
                      }
                    }
                    style={
                      Object {
                        "marginRight": 10,
                      }
                    }
                  />
                </View>
                <View>
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/level-complete/star.png",
                      }
                    }
                    style={
                      Object {
                        "marginRight": 10,
                      }
                    }
                  />
                </View>
                <View>
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/level-complete/star.png",
                      }
                    }
                    style={
                      Object {
                        "marginRight": 10,
                      }
                    }
                  />
                </View>
              </View>,
              <YuText
                style={
                  Object {
                    "fontSize": 24,
                  }
                }
              >
                6 yucoin
              </YuText>,
            ],
            "style": Object {
              "flex": 1,
              "flexGrow": 1,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <View>
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />
                  </View>,
                  <View>
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />
                  </View>,
                  <View>
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />
                  </View>,
                ],
                "style": Object {
                  "flex": 1,
                  "flexDirection": "row",
                  "marginLeft": -8,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "class",
                  "props": Object {
                    "children": <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "source": Object {
                        "testUri": "../../../assets/level-complete/star.png",
                      },
                      "style": Object {
                        "marginRight": 10,
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "class",
                  "props": Object {
                    "children": <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "source": Object {
                        "testUri": "../../../assets/level-complete/star.png",
                      },
                      "style": Object {
                        "marginRight": 10,
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "2",
                  "nodeType": "class",
                  "props": Object {
                    "children": <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "source": Object {
                        "testUri": "../../../assets/level-complete/star.png",
                      },
                      "style": Object {
                        "marginRight": 10,
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "6 yucoin",
                "style": Object {
                  "fontSize": 24,
                },
              },
              "ref": null,
              "rendered": "6 yucoin",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <View
          style={
            Object {
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "width": 160,
              }
            }
          >
            <YuText
              bold={true}
            >
              steps
            </YuText>
            <YuText
              bold={true}
            >
              30 minutes
            </YuText>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexGrow": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                  "marginLeft": -8,
                }
              }
            >
              <View>
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/level-complete/star.png",
                    }
                  }
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                />
              </View>
              <View>
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/level-complete/star.png",
                    }
                  }
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                />
              </View>
              <View>
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/level-complete/star.png",
                    }
                  }
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                />
              </View>
            </View>
            <YuText
              style={
                Object {
                  "fontSize": 24,
                }
              }
            >
              6 yucoin
            </YuText>
          </View>
        </View>,
        "style": Object {
          "display": "flex",
          "paddingLeft": 176,
          "paddingRight": 40,
          "paddingVertical": 40,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "width": 160,
                }
              }
            >
              <YuText
                bold={true}
              >
                steps
              </YuText>
              <YuText
                bold={true}
              >
                30 minutes
              </YuText>
            </View>,
            <View
              style={
                Object {
                  "flex": 1,
                  "flexGrow": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginLeft": -8,
                  }
                }
              >
                <View>
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/level-complete/star.png",
                      }
                    }
                    style={
                      Object {
                        "marginRight": 10,
                      }
                    }
                  />
                </View>
                <View>
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/level-complete/star.png",
                      }
                    }
                    style={
                      Object {
                        "marginRight": 10,
                      }
                    }
                  />
                </View>
                <View>
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/level-complete/star.png",
                      }
                    }
                    style={
                      Object {
                        "marginRight": 10,
                      }
                    }
                  />
                </View>
              </View>
              <YuText
                style={
                  Object {
                    "fontSize": 24,
                  }
                }
              >
                6 yucoin
              </YuText>
            </View>,
          ],
          "style": Object {
            "display": "flex",
            "flexDirection": "row",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <YuText
                  bold={true}
                >
                  steps
                </YuText>,
                <YuText
                  bold={true}
                >
                  30 minutes
                </YuText>,
              ],
              "style": Object {
                "width": 160,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "steps",
                },
                "ref": null,
                "rendered": "steps",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "30 minutes",
                },
                "ref": null,
                "rendered": "30 minutes",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                      "marginLeft": -8,
                    }
                  }
                >
                  <View>
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />
                  </View>
                  <View>
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />
                  </View>
                  <View>
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />
                  </View>
                </View>,
                <YuText
                  style={
                    Object {
                      "fontSize": 24,
                    }
                  }
                >
                  6 yucoin
                </YuText>,
              ],
              "style": Object {
                "flex": 1,
                "flexGrow": 1,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <View>
                      <Image
                        source={
                          Object {
                            "testUri": "../../../assets/level-complete/star.png",
                          }
                        }
                        style={
                          Object {
                            "marginRight": 10,
                          }
                        }
                      />
                    </View>,
                    <View>
                      <Image
                        source={
                          Object {
                            "testUri": "../../../assets/level-complete/star.png",
                          }
                        }
                        style={
                          Object {
                            "marginRight": 10,
                          }
                        }
                      />
                    </View>,
                    <View>
                      <Image
                        source={
                          Object {
                            "testUri": "../../../assets/level-complete/star.png",
                          }
                        }
                        style={
                          Object {
                            "marginRight": 10,
                          }
                        }
                      />
                    </View>,
                  ],
                  "style": Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginLeft": -8,
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "0",
                    "nodeType": "class",
                    "props": Object {
                      "children": <Image
                        source={
                          Object {
                            "testUri": "../../../assets/level-complete/star.png",
                          }
                        }
                        style={
                          Object {
                            "marginRight": 10,
                          }
                        }
                      />,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "source": Object {
                          "testUri": "../../../assets/level-complete/star.png",
                        },
                        "style": Object {
                          "marginRight": 10,
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "1",
                    "nodeType": "class",
                    "props": Object {
                      "children": <Image
                        source={
                          Object {
                            "testUri": "../../../assets/level-complete/star.png",
                          }
                        }
                        style={
                          Object {
                            "marginRight": 10,
                          }
                        }
                      />,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "source": Object {
                          "testUri": "../../../assets/level-complete/star.png",
                        },
                        "style": Object {
                          "marginRight": 10,
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "2",
                    "nodeType": "class",
                    "props": Object {
                      "children": <Image
                        source={
                          Object {
                            "testUri": "../../../assets/level-complete/star.png",
                          }
                        }
                        style={
                          Object {
                            "marginRight": 10,
                          }
                        }
                      />,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "source": Object {
                          "testUri": "../../../assets/level-complete/star.png",
                        },
                        "style": Object {
                          "marginRight": 10,
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "6 yucoin",
                  "style": Object {
                    "fontSize": 24,
                  },
                },
                "ref": null,
                "rendered": "6 yucoin",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ChalengesHistorySlot should match snapshot with 0 rating 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengesHistorySlot
    availableAtLevel={3}
    duration="30 minutes"
    locked={false}
    rating={0}
    reward={6}
    type="steps"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <View
        style={
          Object {
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "width": 160,
            }
          }
        >
          <YuText
            bold={true}
          >
            steps
          </YuText>
          <YuText
            bold={true}
          >
            30 minutes
          </YuText>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexGrow": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "row",
                "marginLeft": -8,
              }
            }
          >
            <View>
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/level-complete/no-star.png",
                  }
                }
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
              />
            </View>
            <View>
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/level-complete/no-star.png",
                  }
                }
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
              />
            </View>
            <View>
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/level-complete/no-star.png",
                  }
                }
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
              />
            </View>
          </View>
          <YuText
            style={
              Object {
                "fontSize": 24,
              }
            }
          >
            6 yucoin
          </YuText>
        </View>
      </View>,
      "style": Object {
        "display": "flex",
        "paddingLeft": 176,
        "paddingRight": 40,
        "paddingVertical": 40,
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "width": 160,
              }
            }
          >
            <YuText
              bold={true}
            >
              steps
            </YuText>
            <YuText
              bold={true}
            >
              30 minutes
            </YuText>
          </View>,
          <View
            style={
              Object {
                "flex": 1,
                "flexGrow": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                  "marginLeft": -8,
                }
              }
            >
              <View>
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/level-complete/no-star.png",
                    }
                  }
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                />
              </View>
              <View>
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/level-complete/no-star.png",
                    }
                  }
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                />
              </View>
              <View>
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/level-complete/no-star.png",
                    }
                  }
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                />
              </View>
            </View>
            <YuText
              style={
                Object {
                  "fontSize": 24,
                }
              }
            >
              6 yucoin
            </YuText>
          </View>,
        ],
        "style": Object {
          "display": "flex",
          "flexDirection": "row",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                bold={true}
              >
                steps
              </YuText>,
              <YuText
                bold={true}
              >
                30 minutes
              </YuText>,
            ],
            "style": Object {
              "width": 160,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "steps",
              },
              "ref": null,
              "rendered": "steps",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "30 minutes",
              },
              "ref": null,
              "rendered": "30 minutes",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginLeft": -8,
                  }
                }
              >
                <View>
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/level-complete/no-star.png",
                      }
                    }
                    style={
                      Object {
                        "marginRight": 10,
                      }
                    }
                  />
                </View>
                <View>
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/level-complete/no-star.png",
                      }
                    }
                    style={
                      Object {
                        "marginRight": 10,
                      }
                    }
                  />
                </View>
                <View>
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/level-complete/no-star.png",
                      }
                    }
                    style={
                      Object {
                        "marginRight": 10,
                      }
                    }
                  />
                </View>
              </View>,
              <YuText
                style={
                  Object {
                    "fontSize": 24,
                  }
                }
              >
                6 yucoin
              </YuText>,
            ],
            "style": Object {
              "flex": 1,
              "flexGrow": 1,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <View>
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/no-star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />
                  </View>,
                  <View>
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/no-star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />
                  </View>,
                  <View>
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/no-star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />
                  </View>,
                ],
                "style": Object {
                  "flex": 1,
                  "flexDirection": "row",
                  "marginLeft": -8,
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "class",
                  "props": Object {
                    "children": <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/no-star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "source": Object {
                        "testUri": "../../../assets/level-complete/no-star.png",
                      },
                      "style": Object {
                        "marginRight": 10,
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "class",
                  "props": Object {
                    "children": <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/no-star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "source": Object {
                        "testUri": "../../../assets/level-complete/no-star.png",
                      },
                      "style": Object {
                        "marginRight": 10,
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "2",
                  "nodeType": "class",
                  "props": Object {
                    "children": <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/no-star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "source": Object {
                        "testUri": "../../../assets/level-complete/no-star.png",
                      },
                      "style": Object {
                        "marginRight": 10,
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "6 yucoin",
                "style": Object {
                  "fontSize": 24,
                },
              },
              "ref": null,
              "rendered": "6 yucoin",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <View
          style={
            Object {
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "width": 160,
              }
            }
          >
            <YuText
              bold={true}
            >
              steps
            </YuText>
            <YuText
              bold={true}
            >
              30 minutes
            </YuText>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "flexGrow": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                  "marginLeft": -8,
                }
              }
            >
              <View>
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/level-complete/no-star.png",
                    }
                  }
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                />
              </View>
              <View>
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/level-complete/no-star.png",
                    }
                  }
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                />
              </View>
              <View>
                <Image
                  source={
                    Object {
                      "testUri": "../../../assets/level-complete/no-star.png",
                    }
                  }
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                />
              </View>
            </View>
            <YuText
              style={
                Object {
                  "fontSize": 24,
                }
              }
            >
              6 yucoin
            </YuText>
          </View>
        </View>,
        "style": Object {
          "display": "flex",
          "paddingLeft": 176,
          "paddingRight": 40,
          "paddingVertical": 40,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "width": 160,
                }
              }
            >
              <YuText
                bold={true}
              >
                steps
              </YuText>
              <YuText
                bold={true}
              >
                30 minutes
              </YuText>
            </View>,
            <View
              style={
                Object {
                  "flex": 1,
                  "flexGrow": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginLeft": -8,
                  }
                }
              >
                <View>
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/level-complete/no-star.png",
                      }
                    }
                    style={
                      Object {
                        "marginRight": 10,
                      }
                    }
                  />
                </View>
                <View>
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/level-complete/no-star.png",
                      }
                    }
                    style={
                      Object {
                        "marginRight": 10,
                      }
                    }
                  />
                </View>
                <View>
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/level-complete/no-star.png",
                      }
                    }
                    style={
                      Object {
                        "marginRight": 10,
                      }
                    }
                  />
                </View>
              </View>
              <YuText
                style={
                  Object {
                    "fontSize": 24,
                  }
                }
              >
                6 yucoin
              </YuText>
            </View>,
          ],
          "style": Object {
            "display": "flex",
            "flexDirection": "row",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <YuText
                  bold={true}
                >
                  steps
                </YuText>,
                <YuText
                  bold={true}
                >
                  30 minutes
                </YuText>,
              ],
              "style": Object {
                "width": 160,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "steps",
                },
                "ref": null,
                "rendered": "steps",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "bold": true,
                  "children": "30 minutes",
                },
                "ref": null,
                "rendered": "30 minutes",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                      "marginLeft": -8,
                    }
                  }
                >
                  <View>
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/no-star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />
                  </View>
                  <View>
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/no-star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />
                  </View>
                  <View>
                    <Image
                      source={
                        Object {
                          "testUri": "../../../assets/level-complete/no-star.png",
                        }
                      }
                      style={
                        Object {
                          "marginRight": 10,
                        }
                      }
                    />
                  </View>
                </View>,
                <YuText
                  style={
                    Object {
                      "fontSize": 24,
                    }
                  }
                >
                  6 yucoin
                </YuText>,
              ],
              "style": Object {
                "flex": 1,
                "flexGrow": 1,
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <View>
                      <Image
                        source={
                          Object {
                            "testUri": "../../../assets/level-complete/no-star.png",
                          }
                        }
                        style={
                          Object {
                            "marginRight": 10,
                          }
                        }
                      />
                    </View>,
                    <View>
                      <Image
                        source={
                          Object {
                            "testUri": "../../../assets/level-complete/no-star.png",
                          }
                        }
                        style={
                          Object {
                            "marginRight": 10,
                          }
                        }
                      />
                    </View>,
                    <View>
                      <Image
                        source={
                          Object {
                            "testUri": "../../../assets/level-complete/no-star.png",
                          }
                        }
                        style={
                          Object {
                            "marginRight": 10,
                          }
                        }
                      />
                    </View>,
                  ],
                  "style": Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginLeft": -8,
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "0",
                    "nodeType": "class",
                    "props": Object {
                      "children": <Image
                        source={
                          Object {
                            "testUri": "../../../assets/level-complete/no-star.png",
                          }
                        }
                        style={
                          Object {
                            "marginRight": 10,
                          }
                        }
                      />,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "source": Object {
                          "testUri": "../../../assets/level-complete/no-star.png",
                        },
                        "style": Object {
                          "marginRight": 10,
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "1",
                    "nodeType": "class",
                    "props": Object {
                      "children": <Image
                        source={
                          Object {
                            "testUri": "../../../assets/level-complete/no-star.png",
                          }
                        }
                        style={
                          Object {
                            "marginRight": 10,
                          }
                        }
                      />,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "source": Object {
                          "testUri": "../../../assets/level-complete/no-star.png",
                        },
                        "style": Object {
                          "marginRight": 10,
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": "2",
                    "nodeType": "class",
                    "props": Object {
                      "children": <Image
                        source={
                          Object {
                            "testUri": "../../../assets/level-complete/no-star.png",
                          }
                        }
                        style={
                          Object {
                            "marginRight": 10,
                          }
                        }
                      />,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "source": Object {
                          "testUri": "../../../assets/level-complete/no-star.png",
                        },
                        "style": Object {
                          "marginRight": 10,
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "6 yucoin",
                  "style": Object {
                    "fontSize": 24,
                  },
                },
                "ref": null,
                "rendered": "6 yucoin",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ChalengesHistorySlot should show locked 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengesHistorySlot
    availableAtLevel={3}
    duration="30 minutes"
    locked={true}
    rating={3}
    reward={6}
    type="steps"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <View
        style={
          Object {
            "opacity": 0.5,
          }
        }
      >
        <YuText
          bold={true}
        >
          ?
        </YuText>
        <YuText
          bold={true}
        >
          unlock at level 
          3
        </YuText>
      </View>,
      "style": Object {
        "display": "flex",
        "paddingLeft": 176,
        "paddingRight": 40,
        "paddingVertical": 40,
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <YuText
            bold={true}
          >
            ?
          </YuText>,
          <YuText
            bold={true}
          >
            unlock at level 
            3
          </YuText>,
        ],
        "style": Object {
          "opacity": 0.5,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "?",
          },
          "ref": null,
          "rendered": "?",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": Array [
              "unlock at level ",
              3,
            ],
          },
          "ref": null,
          "rendered": Array [
            "unlock at level ",
            3,
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <View
          style={
            Object {
              "opacity": 0.5,
            }
          }
        >
          <YuText
            bold={true}
          >
            ?
          </YuText>
          <YuText
            bold={true}
          >
            unlock at level 
            3
          </YuText>
        </View>,
        "style": Object {
          "display": "flex",
          "paddingLeft": 176,
          "paddingRight": 40,
          "paddingVertical": 40,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <YuText
              bold={true}
            >
              ?
            </YuText>,
            <YuText
              bold={true}
            >
              unlock at level 
              3
            </YuText>,
          ],
          "style": Object {
            "opacity": 0.5,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "?",
            },
            "ref": null,
            "rendered": "?",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": Array [
                "unlock at level ",
                3,
              ],
            },
            "ref": null,
            "rendered": Array [
              "unlock at level ",
              3,
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
